# Endoscopy_video-Filter-frame

./: .dockerignore  .gitignore  Dockerfile.celery  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
database/: chroma_db.py
service/: embedding_service.py  filter_service.py  model_service.py
utils/: celery_app.py  filter_utils.py  video_utils.py
