[project]
name = "endoscopy-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "numpy>=2.2.6",
    "onnxruntime<1.20",
    "opencv-python-headless>=5.0.0.93",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.1",
]

[tool.uv.sources]
torch = [ { index = "pytorch-cpu" } ]
torchvision = [ { index = "pytorch-cpu" } ]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true